# pyfar

./: .bumpversion.toml  .copier-answers.yml  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.rst  C._t  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  demo.py  dsp.smooth_fractional_octave_5.csv  dsp.smooth_fractional_octave_complex.csv  dsp.smooth_fractional_octave_complex_complex.csv  dsp.smooth_fractional_octave_complex_input.csv  dsp.smooth_fractional_octave_magnitude_copy_phase.csv  dsp.smooth_fractional_octave_magnitude_phase.csv  dsp.smooth_fractional_octave_magnitude_phase_complex.csv  dsp.smooth_fractional_octave_magnitude_zerophase.csv  dsp.smooth_fractional_octave_magnitude_zerophase_complex.csv  environment.yml  haiopy.mplstyle  plot_demo.py  pyproject.toml  pytest.ini  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  test_notebook.ipynb  tmp.py  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  cookiecutter_issue_template.md
.github/workflows/: add_to_project.yml  assign_to_project.yml  build_joss_pdf.yml  check_modified_history.yml  create_issue_if_coockiecutter.yml  create_issue_if_cookiecutter.yml  create_pr_cookiecutter.yml  create_pr_on_template_updates.yml  has_label.yml  has_version_label.yml  has_version_milestone.yml  publish.yml  test.yml  test_deprecation.yml
docs/: Makefile  api_reference.rst  classes.rst  concepts.rst  conf.py  coordinates.nblink  haiopy.classes.rst  haiopy.fft.rst  haiopy.plot.rst  haiopy.rst  index.rst  installation.rst  make.bat  modules.rst  pyfar.classes.rst  pyfar.classes_audio.rst  pyfar.classes_coordinates.rst  pyfar.classes_filter.rst  pyfar.classes_orientations.rst  pyfar.dsp.fft.rst  pyfar.dsp.rst  pyfar.fft.rst  pyfar.plot.rst  pyfar.rst  pyfar.signals.rst  pyfar.spatial.rst  pyfar.spatial.samplings.rst  pyfar_demo.nblink  todo.txt  usage.rst
docs/_static/: custom.js
docs/_templates/: navbar-nav.html  template.ipynb
docs/classes/: pyfar.audio.rst  pyfar.coordinates.rst  pyfar.filter.rst  pyfar.orientations.rst  pyfar.regularization.rst  pyfar.rotation.rst  pyfar.transmission_matrix.rst
docs/concepts/: pyfar.arithmetic_operations.rst  pyfar.audio.rst  pyfar.audio_classes.rst  pyfar.coordinates.rst  pyfar.fft.rst  pyfar.filter.rst  pyfar.filter_classes.rst  pyfar.filter_types.rst  pyfar.plot.rst
docs/modules/: pyfar.constants.rst  pyfar.dsp.filter.rst  pyfar.dsp.rst  pyfar.dsp.utils.rst  pyfar.io.rst  pyfar.level.rst  pyfar.plot.rst  pyfar.plot.ticker.rst  pyfar.rst  pyfar.samplings.rst  pyfar.signals.files.rst  pyfar.testing.plot_utils.rst  pyfar.testing.stub_utils.rst  pyfar.utils.rst
docs/resources/: coordinate_systems.ai  plot_shortcuts.rst  pyfar.dsp.filter.types.py
examples/: arithmetic_operations.ipynb  audio_objects.ipynb  coordinates.ipynb  filtering_signals.ipynb  haiopy_demo.ipynb  presentation.ipynb  pyfar_demo.ipynb
haiopy/: __init__.py  arithmetic.py  coordinates.py  dsp.py  fft.py  haiopy.py  io.py  orientation.py  orientations.py  plot.py  signals.py
haiopy/dsp/: __init__.py  filter.py
haiopy/plot/: __init__.py  _interaction.py  _line.py  _plot.py  dsp.py  gui.py  line.py  plot.py  spatial.py  ticker.py  utils.py
haiopy/resources/: samplings_fliege.mat
haiopy/spatial/: _lebedev.py  samplings.py  spatial.py
paper/: .gitignore  Makefile  README.md  paper.md  references.bib
pf/classes/: coordinates.py
pyfar/: __init__.py  _codec.py  _utils.py  arithmetic.py  codec.py  coordinates.py  fft.py  io.py  orientations.py  signal.py  test.txt  utils.py
pyfar/_concepts/: arithmetic_operations.py  audio_classes.py  audio_concepts.py  coordinates.py  coordinates_concepts.py  fft.py  fft_concepts.py  filter_classes.py  filter_concepts.py  filter_types.py  plots.py
pyfar/classes/: _PyfarArithmetics.py  _PyfarBase.py  __init__.py  _pyfar_base.py  _pyfar_multichannel.py  audio.py  audio_concepts.py  constants.py  coordinates.py  coordinates_concepts.py  filter.py  filter_concepts.py  numpy_like.py  orientations.py  pyfar_base.py  regularization.py  rotation.py  samplingSphere.py  transmission_matrix.py  warnings.py
pyfar/constants/: __init__.py  air_attenuation.py  constants.py  frequency_weighting.py  medium_attenuation.py  speed_of_sound.py  utils.py
pyfar/dsp/: __init__.py  _audiofilter.py  average.py  classes.py  convolution.py  dsp.py  dsp_delay.py  dsp_interpolation.py  dummyfunction.py  fft.py  filter.py  interpolation.py  levels.py  normalize.py  regularization.py  utils.py  window.py  zeropadding.py
pyfar/io/: __init__.py  _codec.py  io.py
pyfar/level/: __init__.py  _utils.py  standard_levels.py  time_weighting.py  utils.py
pyfar/plot/: __init__.py  _interaction.py  _line.py  _line_2d.py  _two_d.py  _utils.py  interaction.py  line.py  line_2d.py  plane.py  plot.py  spatial.py  ticker.py  two_d.py  utils.py
pyfar/samplings/: __init__.py  samplings.py  spatial.py
pyfar/signals/: __init__.py  audio_files.py  deterministic.py  files.py  signals.py  (+1 more)
tests/: __init__.py  conftest.py  stub_utils.py  test_PyfarBase.py  test__utils.py  test_arithmetic.py  test_audio.py  test_audio_frequency_data.py  test_audio_signal.py  test_audio_signal_arithmetic.py  test_audio_signal_iterator.py  test_audio_time_data.py  test_channel_modifications.py  test_codec.py  test_constants.py  test_constants_air_attenuation.py  test_constants_center_frequencies.py  test_constants_fractional_octave_filter_tolerances.py  test_constants_octave_band_tolerances.py  test_constants_speed_of_sound.py  test_constants_speed_of_sound_cramer.py  test_constants_utils.py  test_convolution.py  test_coodinates_find.py  test_coordiantes_arithmetic.py  test_coordinate_transforms.py  test_coordinates.py  test_coordinates_arithmetic.py  test_coordinates_deprecated.py  test_coordinates_find.py  test_coordinates_new.py  test_coordinates_old.py  test_copy.py  test_data_frequency.py  test_data_time.py  test_deprecations.py  test_dsp.py  test_dsp_average.py  test_dsp_correlate.py  test_dsp_decibel.py  (+67 more)
(+141 files in other folders)
