#------------------------------------------------------------------------------
# Copyright (c) The pyfar developers
#------------------------------------------------------------------------------

[project]
name = "pyfar"
dynamic = ["version"]
description = "Project for data formats in acoustics."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    { name = "The pyfar developers", email = "info@pyfar.org" },
]
keywords = [
    "pyfar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.5.0",
    "matplotlib",
    "sofar>=0.1.2",
    "urllib3",
    "deepdiff",
    "soundfile>=0.11.0",
]
# TODO: add maintainers section here

[project.optional-dependencies]
setup = [
    "pytest-runner",
]
tests = [
    "pytest",
    "wheel",
    "watchdog",
    "ruff==0.6.5",
    "coverage",
    "twine",
    "pytest-cov",
]
docs = [
    "sphinx<8",
    "autodocsumm",
    "pydata-sphinx-theme",
    "sphinx_mdinclude",
    "sphinx-design",
    "sphinx-favicon",
    "sphinx-reredirects",
]
dev = ["pyfar[setup,tests,docs]"]

[project.urls]
"Bug Tracker" = "https://github.com/pyfar/pyfar/issues"
Documentation = "https://pyfar.readthedocs.io/"
Download = "https://pypi.org/project/pyfar/"
Homepage = "https://pyfar.org/"
"Source Code" = "https://github.com/pyfar/pyfar"
changelog = "https://github.com/pyfar/pyfar/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyfar/__init__.py"

[tool.hatch.envs.hatch-static-analysis]
# TODO: talk about fixing ruff version
dependencies = ["ruff==0.6.5"]
config-path = "ruff.toml"


[tool.hatch.envs.docs]
platforms = ["linux"]
python = "3.12"
dependencies = [
    "pyfar[docs]"
]

[tool.hatch.envs.docs.scripts]
build = ["cd docs && make html"]

[tool.hatch.envs.hatch-test]
dependencies = [
    "pyfar[tests]"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.hatch-test.scripts]
tests = ["pytest --cov=pyfar tests"]
deprecations = ["pytest -W error::DeprecationWarning"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyfar",
]

[tool.hatch.build.targets.wheel]
packages = ["pyfar"]
